package by.training.nc.sd3.repository;

import by.training.nc.sd3.entity.UserAccount;
import org.springframework.data.jpa.repository.Query;
import org.springframework.data.repository.CrudRepository;
import org.springframework.data.repository.query.Param;
import org.springframework.stereotype.Repository;

import java.util.Optional;

@Repository
public interface UserAccountRepository extends CrudRepository<UserAccount, Long> {

    Optional<UserAccount> findByNameAndPassword(@Param("name") String name, @Param("password") String password);

    Optional<UserAccount> findByName(String name);

}
